<resources>
    <string name="app_name" translatable="false">Deku SMS</string>
    <string name="privacy_policy_url" translatable="false">https://smswithoutborders.com/privacy-policy</string>
    <string name="incoming_messages_channel_name">Incoming Messages</string>
    <string name="running_gateway_clients_channel_name" translatable="false">Running Gateway Listeners</string>
    <string name="foreground_service_failed_channel_name" translatable="false">Gateway clients auto-reconnect</string>
    <string name="message_failed_channel_name" translatable="false">Message Failed</string>
    <string name="incoming_messages_channel_description">Gets called when a new message is received.</string>
    <string name="running_gateway_clients_channel_description">Alerts when gateway clients are listening.</string>
    <string name="foreground_service_failed_channel_description">Click to reconnect Gateway clients</string>
    <string name="message_failed_notifications_descriptions">Get notifications when messages fail</string>
    <string name="gateway_client_service_notification_id">100000000</string>
    <string name="message_failed_notification_id">100000001</string>
    <string name="incoming_messages_channel_id" translatable="false">@string/incoming_messages_channel_name</string>
    <string name="running_gateway_clients_channel_id" translatable="false">@string/running_gateway_clients_channel_name</string>
    <string name="foreground_service_failed_channel_id" translatable="false">@string/foreground_service_failed_channel_name</string>
    <string name="message_failed_channel_id" translatable="false">@string/message_failed_channel_name</string>
    <string name="search_messages_text">Search messages</string>
    <string name="no_showable_router_message">No routed message to show!</string>
    <string name="save_new_gateway_client">Save</string>
    <string name="new_gateway_server_url">Enter URL - e.g. https://example.com:8080/api/</string>
    <string name="new_gateway_server_tag">(Optional) Identifier Tag</string>
    <string name="new_gateway_client_url">Enter URL - e.g. example.com <i>(do not include protocol)</i></string>
    <string name="new_gateway_client_username">Enter username</string>
    <string name="new_gateway_client_password">Enter password</string>
    <string name="new_gateway_client_friendly_name">Enter a friendly name - e.g. Example Node</string>
    <string name="new_gateway_client_virtualhost_name">Enter a virtualhost - <i>default /</i></string>
    <string name="new_gateway_client_port">Port: <i>default 5672</i></string>
    <string name="homepage_menu_archived">Archived</string>
    <string name="homepage_menu_routed">Message Forwarding</string>
    <string name="homepage_menu_clear_draft">Clear all drafts</string>
    <string name="homepage_menu_clear_mark_all_read">Mark all Read</string>
    <string name="homepage_menu_unmute_all">Unmute all</string>
    <string name="homepage_menu_clear_mark_unread">Mark as unread</string>
    <string name="homepage_menu_clear_mark_read">Mark as read</string>
    <string name="homepage_no_message">Send your first message</string>
    <string name="homepage_draft_no_message">Nothing in Drafts</string>
    <string name="homepage_archive_no_message">Nothing in Archives</string>
    <string name="homepage_blocked_no_message">No blocked contacts</string>
    <string name="homepage_muted_no_muted">No Muted contacts</string>
    <string name="homepage_unread_no_message">No unread message</string>
    <string name="homepage_encryption_no_message">No Encrypted Communications contacts</string>
    <string name="no_gateway_server_added">No Gateway server Added</string>
    <string name="gateway_server_listing_toolbar_title">SMS routing Gateways</string>
    <string name="gateway_client_listing_toolbar_title">SMS listening Gateways</string>
    <string name="add_new_gateway_server_toolbar_title">Add Gateway</string>
    <string name="gateway_server_update">Update</string>
    <string name="add_new_gateway_server_http">Add HTTPS Gateway server</string>
    <string name="add_new_gateway_server_ftp">Add FTP Gateway server</string>
    <string name="add_new_gateway_server_smtp">Add SMTP Gateway server</string>
    <string name="add_new_gateway_server_smtp_host">Host</string>
    <string name="add_new_gateway_server_smtp_username">Username</string>
    <string name="add_new_gateway_server_smtp_password">Password</string>
    <string name="add_new_gateway_server_smtp_port">Port</string>
    <string name="add_new_gateway_server_smtp_recipient">Recipient</string>
    <string name="add_new_gateway_server_smtp_recipient_helper">Use commas for multiple recipients e.g example@email.com, example1@email.com</string>
    <string name="add_new_gateway_server_smtp_from">From</string>
    <string name="add_new_gateway_server_smtp_subject">(Optional) Subject</string>
    <string name="add_new_gateway_server_smtp_add">Add</string>
    <string name="notifications_reply_label">Reply</string>
    <string name="notifications_mark_as_read_label">Mark as read</string>
    <string name="notification_title_new_key">Secure communication request</string>
    <string name="notification_title_reply_you">You</string>
    <string name="messages_thread_you">You:</string>
    <string name="messages_thread_encrypted_content">Secured content</string>
    <string name="messages_thread_encrypted_content_label">Secured</string>
    <string name="search_nothing_found">Nothing found</string>
    <string name="default_check_text">To use Deku SMS, make it your default SMS app</string>
    <string name="default_check_btn_text">Set default SMS app</string>
    <string name="default_check_privacy_policy">Read our privacy policy</string>
    <string name="sms_status_delivered">Delivered</string>
    <string name="sms_status_sent">Sent</string>
    <string name="sms_status_sending">sending…</string>
    <string name="sms_status_failed">failed, click to retry.</string>
    <string name="sms_status_failed_only">failed</string>
    <string name="settings_advanced_developers_key" translatable="false">settings_advanced_developers_key</string>
    <string name="settings_locale" translatable="false">settings_locale</string>
    <string name="settings_locale_description">Choose language</string>
    <string name="gateway_server_settings_locale_description">Enable automatic protocol routing</string>
    <string name="gateway_server_settings_locale_summary">Turn this on to route only to 1 protocol at a time. This begins with HTTP and performs a round-robin lookup for the other protocols. Use this to avoid receiving the same message to multiple protocols.</string>
    <string name="settings_about">About</string>
    <string name="settings_title">Settings</string>
    <string name="gateway_server_settings_title">Gateway Server Settings</string>
    <string name="settings_advanced_category_title">Advance</string>
    <string name="settings_developer_category_title">Developers</string>
    <string name="settings_security_category_end_to_end_duration">Allow request for encryption to expire</string>
    <string name="settings_security_category_end_to_end_disable">Disable request to secure messages</string>
    <string name="settings_security_category_end_to_end_disable_summary">Will not affect contacts you are already communicating securely with, but you will not be asked to secure communications with other contacts</string>
    <string name="settings_security_category_end_to_end_duration_summary">When enabled, encryption request sent to contacts would expire after <b>1 hour</b> of not being agreed.</string>
    <string name="settings_SMS_routing_title">Forwarded History</string>
    <string name="settings_SMS_listening_title">SMS listening</string>
    <string name="settings_SMS_listening_server">Configure SMS listening Gateways</string>
    <string name="settings_SMS_listening_SMSWithoutBorders_summary">Configurations for listening SMS messages through AMQP/s</string>
    <string name="gateway_client_add_manually_title">Add Manually</string>
    <string name="settings_SMS_routing_type_base64_option">Base64</string>
    <string name="settings_SMS_routing_type_all_option">All (default)</string>
    <string name="settings_add_gateway_client_protocol_description">Choose the Listening protocol</string>
    <string name="settings_add_gateway_server_protocol_meta_description">All POST are routed as JSON formats.\nAll formats use the following key/value format:\n\n<b>MSISDN</b>:-The address of the incoming message in E.164 Format\n\n<b>text</b>:-The text body of the incoming message </string>
    <string name="settings_gateway_server_protocol_description">Protocol</string>
    <string name="settings_gateway_client_username_description">Username</string>
    <string name="settings_gateway_server_data_format_description">Data format</string>
    <string name="gateway_client_customization_activate">Activate</string>
    <string name="gateway_client_customization_deactivate">Deactivate</string>
    <string name="gateway_client_customization_edit">Edit</string>
    <string name="homepage_fragment_tab_encrypted">Encrypted</string>
    <string name="message_threads_menu_delete">delete</string>
    <string name="messages_threads_menu_archive">archive</string>
    <string name="about_deku_motto">Open source SMS done right</string>
    <string name="about_deku_github_titile" translatable="false">GitHub</string>
    <string name="about_deku_github_description">Deku SMS remains free and open sourced. We believe in giving back to the community that has given us so much. A lot on this app is experimental, but with great experiments comes great findings. Please support us by starring the project on Github and sharing it with your friends.</string>
    <string name="about_deku_github_btn">View on GitHub</string>
    <string name="conversations_menu_call_title">Call</string>
    <string name="conversations_menu_secure_title">Secure</string>
    <string name="conversations_menu_search_title">Search</string>
    <string name="conversation_menu_copy">copy</string>
    <string name="conversation_menu_delete">Delete</string>
    <string name="conversation_menu_share">Share</string>
    <string name="conversation_menu_block">Block</string>
    <string name="conversation_menu_mute">Mute</string>
    <string name="conversation_menu_unmute">Unmute</string>
    <string name="conversation_menu_view_details">View details</string>
    <string name="thread_conversation_timestamp_yesterday">Yesterday</string>
    <string name="sample_date" translatable="false">9:26 AM . MTN</string>
    <string name="conversations_navigation_view_drafts">Drafts</string>
    <string name="conversations_navigation_view_unread">Unread</string>
    <string name="conversations_navigation_view_folders_label">Folders</string>
    <string name="conversations_navigation_view_inbox">Inbox</string>
    <string name="conversations_secure_conversation_request"><b>John</b> has requested to secure this conversation.</string>
    <string name="conversations_secure_conversation_request_agree">Agree to Secure!</string>
    <string name="conversations_secure_conversation_request_information">When you send a message on our platform, it gets scrambled with a special code, just like a secret code you might use with a friend. This code makes it impossible for anyone to peek at your message while it\'s traveling between you and the recipient. Only the person you send it to has the key to unscramble it and read what you wrote. We call this process encryption.\n\nIf you\'re curious about how this encryption works, you can check out this link for a deeper dive</string>
    <string name="conversations_secure_conversation_request_information_deku_encryption_read_more">Learn more</string>
    <string name="route_incoming_messages_of_format">Route incoming messages of format</string>
</resources>