<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/round_lock_24"
        android:id="@+id/conversation_main_menu_encrypt_lock"
        app:showAsAction="never"
        android:title="@string/conversations_menu_secure_title"/>
    <item
        android:icon="@drawable/round_call_24"
        android:id="@+id/conversation_main_menu_call"
        app:showAsAction="ifRoom"
        android:title="@string/conversations_menu_call_title"/>
    <item
        android:icon="@drawable/ic_outline_search_24"
        android:id="@+id/conversation_main_menu_search"
        android:title="@string/conversations_menu_search_title"/>
    <item
        android:id="@+id/conversations_menu_mute"
        android:title="@string/conversation_menu_mute"
        app:showAsAction="never" />
    <item
        android:id="@+id/conversations_menu_unmute"
        android:title="@string/conversation_menu_unmute"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/conversations_menu_block"
        android:title="@string/conversation_menu_block"
        app:showAsAction="never" />
    <item
        android:id="@+id/conversations_menu_delete"
        android:title="@string/conversation_menu_delete"
        app:showAsAction="never" />

</menu>