<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.main"
    style="@style/Widget.Material3.BottomSheet.Modal"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/conversation_secure_request_layout"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/conversation_secure_request_modal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/conversations_secure_conversation_request"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/conversation_secure_request_info_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/conversations_secure_conversation_request_information"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/conversation_secure_request_agree_btn"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/conversations_secure_conversation_request_agree"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/conversation_secure_request_agree_read_more_btn"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/conversations_secure_conversation_request_information_deku_encryption_read_more"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


