<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="1dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/received_message_date_segment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        tools:text="@string/thread_conversation_timestamp_yesterday"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingEnd="80dp"
        android:paddingStart="8dp"
        android:orientation="vertical"
        android:id="@+id/conversation_received_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_received_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/received_messages_drawable"
            android:textColor="@color/md_theme_onSecondaryContainer_mediumContrast"
            tools:text="@string/settings_add_gateway_server_protocol_meta_description"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_thread_received_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="8dp"
            tools:text="@string/sample_date"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>